--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <a id="logo1" href="index.html"><img src="Images/logo3.png" alt="Acme logo, large and in red"></a>
       <h1>My Demo Site</h1>
     </header>
+
     <nav id="main-nav">
       <ul>
         <li><a href="http://www.iit.edu">IIT Home</a></li>
@@ -24,38 +25,43 @@
         <li><a href="http://admissions.iit.edu">IIT Admissions</a></li>
       </ul>
     </nav>
+
     <main id="content-wrapper">
       <div id="main-content">
         <h2><strong>This is our h2 Tag</strong></h2>
         <img class="image-r" src="Images/main.png" alt="Logo for Main Squeeze Juice Company in black and white">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-        <ul id="bul1">
+        <ul>
           <li>List 1</li>
           <li>List 2</li>
           <li>List 3</li>
           <li>List 4</li>
         </ul>
+
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-        <ul id="bul2">
+        <ul>
           <li>List 1</li>
           <li>List 2</li>
           <li>List 3</li>
           <li>List 4</li>
         </ul>
+
         <div id="center">
           <iframe width="400" height="300" src="https://www.youtube.com/embed/-jn9aaNn8_I?si=D1HhLAWQ5awY9BfU" frameborder="0" allowfullscreen></iframe>
         </div>
       </div>
+
       <aside id="side-content">
         <h3>Interesting Articles</h3>
-        <ol id="news">
-          <li><a href="#">Article 1</a><div><p>Preview of very interesting article</p></div></li>
-          <li><a href="#">Article 2</a><div><p>Preview of very interesting article</p></div></li>
-          <li><a href="#">Article 3</a><div><p>Preview of very interesting article</p></div></li>
-          <li><a href="#">Article 4</a><div><p>Preview of very interesting article</p></div></li>
+        <ol>
+          <li><a href="#">Article 1</a><p>Preview of very interesting article</p></li>
+          <li><a href="#">Article 2</a><p>Preview of very interesting article</p></li>
+          <li><a href="#">Article 3</a><p>Preview of very interesting article</p></li>
+          <li><a href="#">Article 4</a><p>Preview of very interesting article</p></li>
         </ol>
       </aside>
     </main>
+
     <footer id="footer">
       <p>Footer Content is here</p>
     </footer>
@@ -63,4 +69,3 @@
 </body>
 
 </html>
-
