--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
   <link href='https://fonts.googleapis.com/css?family=Devonshire' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="normalize.css">
   <link rel="stylesheet" type="text/css" href="style.css">
+  <style>
+    iframe {
+      border: none;
+    }
+  </style>
 </head>
 
 <body>
@@ -47,7 +52,7 @@
         </ul>
 
         <div id="center">
-          <iframe width="400" height="300" src="https://www.youtube.com/embed/-jn9aaNn8_I?si=D1HhLAWQ5awY9BfU" frameborder="0" allowfullscreen></iframe>
+          <iframe width="400" height="300" src="https://www.youtube.com/embed/-jn9aaNn8_I?si=D1HhLAWQ5awY9BfU" allowfullscreen></iframe>
         </div>
       </div>
 
